bdd test for both endpoints